src/intel_display.c
@@ -693,8 +693,13 @@ intel_crtc_init(ScrnInfoPtr scrn, struct intel_mode *mode, int num)
 static Bool
 is_panel(int type)
 {
+#if 0
+	/* XXX https://bugs.freedesktop.org/show_bug.cgi?id=38012 */
 	return (type == DRM_MODE_CONNECTOR_LVDS ||
-	       	type == DRM_MODE_CONNECTOR_eDP);
+		type == DRM_MODE_CONNECTOR_eDP);
+#else
+	return type == DRM_MODE_CONNECTOR_LVDS;
+#endif
 }
 
 static xf86OutputStatus
